file inncesary deleted

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   {% include google-analytics.html %}
   {% endif %}
   -->
+  {% include google-analytics.html %}
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
