--- a/_includes/map.html
+++ b/_includes/map.html
@@ -187,7 +187,7 @@
   // add address markers
   map.addMarker({
     lat: 12.1359922, lng: -86.2685227, title: 'Chocoyo Lbas',
-    infoWindow: { content: '<p>Chocoyo Labs</p>' }
+    infoWindow: { content: '<p>dems agency</p>' }
   });
 
 </script>
