--- a/_includes/side_bar_page.html
+++ b/_includes/side_bar_page.html
@@ -1,5 +1,5 @@
 <div class="banner_logo">
-			<img src="{{ site.url }}/img/logo_header.png">
+			<img src="http://via.placeholder.com/300x130">
 </div>
     <a id="menu-toggle" href="#" class="btn btn-purple btn-lg toggle"><i class="fa fa-bars"></i></a>
 	<div id="sidebar-wrapper" >
